# Router

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: RouterConfig.cmake.in
lib/headers/router/: container.hpp
lib/sources/: container.cpp
tests/: base_test.cc  implementation_test.cc
